<resources>
    <string name="app_name">SpinBot</string>
    <string name="splash_title">pico botella</string>
    <string name="home_title">Home Principal</string>
    <string name="home_message">HU 1.0 completada: el splash ya navega correctamente al home.</string>
    <string name="press_me">Presióname</string>
    <string name="bottle_content_description">Imagen central de una botella para el juego pico botella</string>
    <string name="back">Atrás</string>

    <!-- Retos -->
    <string name="add_challenge">Agregar reto</string>
    <string name="edit_challenge">Editar reto</string>
    <string name="hint_write_challenge">Escriba el reto</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>

    <!-- Eliminar Reto -->
    <string name="delete_title">¿Deseas eliminar el siguiente reto?:</string>
    <string name="no">NO</string>
    <string name="si">SI</string>

    <!-- Instrucciones de Juego -->
    <string name="instructions_title">Reglas del Juego</string>
    <string name="how_to_play_title">¿Cómo se juega?</string>
    <string name="how_to_play_desc">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.</string>
    <string name="who_wins_title">¿Quién gana?</string>
    <string name="who_wins_desc">Gana el último jugador que no abandone el juego.</string>


    <!-- HU 12 - Mostrar reto aleatorio -->
    <string name="random_challenge_placeholder">Reto aleatorio</string>
    <string name="pokemon_random_image">Imagen aleatoria de Pokémon</string>
    <string name="close">Cerrar</string>


    <!-- HU 2 Miniproyecto II - Login y Registro -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_eye_description">Mostrar contraseña</string>
    <string name="login_min_password_error">Mínimo 6 dígitos</string>

    <!-- HU 2 Miniproyecto II - Login y Registro - criterios 6, 7, 8, 11, 12 y 15 -->
    <string name="login_button">Login</string>
    <string name="register_button">Registrarse</string>
    <string name="login_password_eye_show_description">Mostrar contraseña</string>
    <string name="login_password_eye_hide_description">Ocultar contraseña</string>
    <string name="login_success">Bienvenido</string>
    <string name="login_error_unknown">Error desconocido</string>
    <string name="login_error_incorrect">Login incorrecto</string>
    <string name="login_error_email_exists">Error en el registro</string>
    <string name="logout_description">Cerrar sesión</string>
    <string name="logout_success">Sesión cerrada</string>
</resources>
